
Interface changes (aside from moving header files around)
======================================================================


domain (PLANNED; NOT DONE YET. TBD)

    OLD method calls                                NEW method calls
    ---------------------------------------------   ---------------------------------------------
    domain::createForest(...)                       static within forest class

    global createDomain(...)                        static domain::create(...)




Files that need updating / cleanup
------------------------------------------------------------
dd_edge.h               dd_edge.cc
defines.h
domain.h                domain.cc
encoders.h              encoders.cc
enumerator.h            enumerator.cc
forest.h                forest.cc
hash_stream.h
heap.h
impl_unique_table.h     impl_unique_table.cc
loggers.h               loggers.cc
memory.h                memory.cc
node_headers.h          node_headers.cc
opname.h                opname.cc
opname_numer.h          opname_numer.cc
opname_satur.h          opname_satur.cc

oper.h                  oper.cc
oper_binary.h           oper_binary.cc
oper_unary.h            oper_unary.cc

relation_node.h         relation_node.cc
timer.h (move?)


In good shape
------------------------------------------------------------
compute_table.h         compute_table.cc
ct_entry_key.h          ct_entry_key.cc
ct_entry_result.h       ct_entry_result.h
ct_entry_type.h         ct_entry_type.cc
ct_initializer.h        ct_initializer.cc

error.h                 error.cc
initializer.h           initializer.cc
io.h                    io.cc
memstats.h              memstats.cc
node_storage.h          node_storage.cc
policies.h              policies.cc

unique_table.h          unique_table.cc
unpacked_node.h         unpacked_node.cc

variable.h              variable.cc
varorder.h              varorder.cc
